# noosphera

./: .env.example  .gitignore  LICENSE  README.md  dotenv.example  pyproject.toml
noosphera/: __init__.py  get_version.py
noosphera/api_server/: asgi.py  deps.py  main.py
noosphera/api_server/models/: chat.py  models.py
noosphera/api_server/routes/: __init__.py  chat.py  health.py  system.py
noosphera/cli/: conf.py  tenant.py
noosphera/config/: __init__.py  default.toml  loader.py  schema.py
noosphera/core/: errors.py  models.py
noosphera/db/: __init__.py  engine.py  session.py  tenancy.py  tenant_chat_bootstrap.py
noosphera/db/migrations/: README.md  env.py
noosphera/db/migrations/versions/: 0001_core.py
noosphera/db/models/: __init__.py  core.py  tenant_chat.py
noosphera/observability/: __init__.py  logging.py  metrics.py  middleware.py  redaction.py  tracing.py
noosphera/ports/: llm.py  llm_provider_adapter.py
noosphera/providers/: __init__.py  base.py  manager.py  ollama.py  openai.py
noosphera/repositories/: chat_repository.py
noosphera/security/: __init__.py  auth.py  crypto.py  security_schemes.py
noosphera/services/: chat_service.py  tenant_manager.py
scripts/: db_init.sh  dev_run.sh
